[package]
name = "task_limiter"
version = "0.1.0"
description = "A lib which can directly limit the specified process occupancy, and support multithreading and dynamically changing occupancy"
license = "WTFPL"
repository = "github.com/shadow3aaa/task_limiter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
sysinfo = "0.29.0"